# Poker-Adviser

./: .env.example  .gitignore  2:15 手牌记录.csv  2:15 盈利情况.csv  CLAUDE.md  DIFFERENCE_ANALYSIS.md  OPTIMIZATION_PLAN.md  PokerMaster_Pro_V2_Doubao_Implementation.docx  README.md  WEB_PAGE_ISSUES.md  check_db_hands.py  pyproject.toml  test_batch_review_single.py  test_code_model.py  test_code_model_v2.py  test_connection.py  test_doubao_code_direct.py  test_poker_data.csv  《PokerMaster Pro 德州扑克智能分析训练系统 产品设计文档》 (1).docx
cli/: __init__.py  main.py
config/: agent_styles.json  baselines.json  skills.json
src/poker_advisor/: __init__.py  config.py
src/poker_advisor/agents/: __init__.py  base.py  decision.py  factory.py  styles.py
src/poker_advisor/ai/: __init__.py  analyzer.py  client.py  prompts.py  trainer.py
src/poker_advisor/analysis/: __init__.py  batch_reviewer.py  calculator.py  leak_detector.py  positional.py
src/poker_advisor/export/: __init__.py  pokernow.py
src/poker_advisor/formatters/: __init__.py  table.py  text.py
src/poker_advisor/models/: __init__.py  action.py  card.py  hand.py  position.py  simulation.py  stats.py
src/poker_advisor/parser/: __init__.py  patterns.py  pokernow_parser.py
tests/: test_calculator.py  test_hand_type.py  test_integration.py  test_leak_detector.py  test_parser.py  test_simulation.py  test_training.py
tests/fixtures/: sample_log.txt  sample_log_csv.csv
web/: app.py  navigation.py  theme.py
web/pages/: 1_stats.py  2_leaks.py  3_ai_analysis.py  4_training.py  5_hands.py  6_management.py  7_simulation.py
(+13 files in other folders)
